# heart-sutra

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_v5.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/aligned/: synoptic_alignment.html  synoptic_alignment.json  synoptic_alignment.md
data/collation/: variant_table.json
data/prajnaparamita/: pancavimsati_parallel.json
data/stemma/: stemma_codicum.json
docs/: ALIGNMENT_PROTOCOL.md  ARCHITECTURE.html  ARCHITECTURE.md  BIBLIOGRAPHY.md  FINDINGS.md  INDICES.md  INTRODUCTION.md  METHODOLOGY.html  METHODOLOGY.md  METHODOLOGY_FULL.md  README.html
output/latex/: chinese_critical.tex  heart_sutra_critical.tex  (+7 more)
research/: CHAOJING_REVISION_PRACTICES.md  COLLATION_SUMMARY.md  DATING_METHODOLOGY.md  ENGAGEMENT_WITH_CRITICS.md  FALSIFIABILITY.md  FULL_COLLATION.md  INTERPRETIVE_DESCRIPTIVE.md  LITERATURE_SEARCH_FEB2026.md  MAYA_SUNYATA_DECISION.md  MULTIPLE_TRANSLATIONS_SURVEY.md  PAPER_DRAFT_SECTIONS.md  PASSAGE_COMPARISON.md  PRIMARY_MANUSCRIPT_LIMITATIONS.md  PROSE_TIGHTENING_GUIDE.md  T250_T251_T223_COMPARISON.md  VARIANT_CLASSIFICATION_CRITERIA.md  original_findings.json
scripts/: check_data_version.py  check_latex_staleness.py  convert_to_pdf.sh  generate_synoptic.py  md_to_pdf.py
tests/: conftest.py  test_alignment_base_parallel_only.py  test_alignment_chinese_parallel_only.py  test_cli.py  test_collate.py  test_data.py  test_latex_gen.py  test_models.py  test_resolve_data_dir.py  test_synoptic.py  test_tei_export.py  test_transliterate.py  test_validate.py  test_witnesses.py
working/: PAPER_TODOS.md
(+28 files in other folders)
